# sten-och-skrot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  entity_factory.cc  entity_factory.h  main.cc
components/: body.cc  body.h  position.cc  position.h  sprite.cc  sprite.h  velocity.cc  velocity.h
systems/: BorderSystem.cc  BorderSystem.h  MovementSystem.cc  MovementSystem.h  SpriteRenderSystem.cc  SpriteRenderSystem.h
